k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    service: app
spec:
  ports:
    - port: 8080
  selector:
    service: app
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    service: db
spec:
  ports:
    - port: 3306
  selector:
    service: db
